modify swagger in signUpController
