# controllers/signUpController.go
@@ -25,8 +25,10 @@ type InputUserData struct {
 // @Description 이미 회원인 경우 오류를 발생시켜 오류 발생위치와 오류 메시지를 반환합니다.<br>
 // @Accept  json
 // @Produce  json
+// @Param user body InputUserData true "user"
 // @Router /accounts/sign-up [post]
 // @Success 200 {} string "token"
+// @Header 200 {object} user "token"
 // @Failure	208 {} string ""이미 존재한 값이 들어올 때", "{"err": {"errorPoint": "message"}}"
 // @Failure	400 {} string ""잘못된 값이 들어올 때", "{"err": {"errorPoint": "message"}}"
 // @Failure	404 {} string ""해당 값을 통해서 회원 가입을 못할 때", "{"err": {"errorPoint": "message"}}"
