# docs/swagger.yaml
@@ -8,6 +8,21 @@ definitions:
       name:
         type: string
     type: object
+  controllers.InputUserData:
+    properties:
+      email:
+        type: string
+      favoriteArtist:
+        type: integer
+      nickName:
+        type: string
+      password1:
+        type: string
+      password2:
+        type: string
+      userName:
+        type: string
+    type: object
   controllers.OutputArtistList:
     properties:
       artistId:
@@ -31,11 +46,22 @@ paths:
         빈 값이 요청되었을 경우 오류 발생위치와 오류 메시지를 반환합니다.<br>
         잘못된 값이 들어왔을 경우 오류 발생위치와 오류 메시지를 반환합니다.<br>
         이미 회원인 경우 오류를 발생시켜 오류 발생위치와 오류 메시지를 반환합니다.<br>
+      parameters:
+      - description: user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.InputUserData'
       produces:
       - application/json
       responses:
         "200":
           description: token
+          headers:
+            user:
+              description: token
+              type: object
           schema:
             type: ""
         "208":
